--- a/Pipfile
+++ b/Pipfile
@@ -12,4 +12,4 @@ requests = "*"
 python_version = "3.7"
 
 [scripts]
-build = "bash -c 'mkdir build && python connpass_api.py'"
+build = "python connpass_api.py"
